--- a/src/components/Dropdown/styles.less
+++ b/src/components/Dropdown/styles.less
@@ -6,7 +6,8 @@
     font-size: 16px;
     border: none;
     cursor: pointer;
-  }
+    font-family: "Poppins", sans-serif;
+}
   
   /* Dropdown button on hover & focus */
   .dropbtn:hover, .dropbtn:focus {
