Configurações pra usar less, ajustes no estilo e aplicação de responsividade

--- a/src/styles/helpers.less
+++ b/src/styles/helpers.less
@@ -34,3 +34,11 @@
         @rules();
     }
 }
+
+.typography(@font, @size, @wheight, @styles:normal, @line-height, @color){
+    font-family: @font, sans-serif;
+    font-weight: @wheight;
+    font-size: @size;
+    line-height: @line-height; 
+    color:@color;
+}
