--- a/src/components/Dropdown/styles.less
+++ b/src/components/Dropdown/styles.less
@@ -1,45 +1,86 @@
-/* Dropdown Button */
-.dropbtn {
-    background-color: #3498DB;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-    font-family: "Poppins", sans-serif;
-}
+
+
   
-  /* Dropdown button on hover & focus */
-  .dropbtn:hover, .dropbtn:focus {
-    background-color: #2980B9;
-  }
   
+  
+  
+  @import '../../styles/helpers.less';
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content p{
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content p:hover {background-color: #ddd}
+    &__wrapper{
+      background-color: #ebeff2;     
+      padding: 16px;      
+      border: none;
+      cursor: pointer;
+      border-radius: 24px;
+      border: 2px solid #808191;
+
+      .typography("Poppins", 16px, 500, normal, 32px,#11142D);
+     
+     
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      .mobile({
+        justify-content: space-around;
+      });
+      
+      .mobileS({
+        font-size: 14px;       
+      });
+    }
+
+     /* Dropdown Content (Hidden by Default) */  
+    &__content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      border-radius: 24px;
+    
+      width: 100%;
+      height: 300px;
+      overflow-y: scroll;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      p{
+        padding: 12px 32px;
+        text-decoration: none;
+        display: block;
+        cursor: pointer;
+        text-transform: capitalize;       
+        .typography("Inter", 14px, 500 , normal,  16px, #808191);
+
+        &:hover{
+          background-color: #ddd
+        }
+      }
+    }
+
+    /* Dropdown Button */
+    &__button { 
+      height:12px;
+      width:12px;
+      &:hover, &:focus {
+        border-color: #7c7e80;
+     } 
+
+      &__container{
+        border-radius: 50%;
+        border: 2px solid #808191;
+        width:18px;
+        height:18px;      
+        display: flex;  
+        justify-content: center;
+        align-items: center;   
+      }      
+    }
+  } 
   
   /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
   .show {display:block;}
+  .rotateIcon{
+    transform:rotate(180deg);
+  }
