Feat: adicionando mensagem de vazio

--- a/src/components/Dropdown/styles.less
+++ b/src/components/Dropdown/styles.less
@@ -16,6 +16,7 @@
       cursor: pointer;
       border-radius: 24px;
       border: 2px solid #808191;
+      min-width: 200px;
 
       .typography("Poppins", 16px, 500, normal, 32px,#11142D);     
      
